--- a/package.json
+++ b/package.json
@@ -1,36 +1,41 @@
 {
-    "name": "poker",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "vue-cli-service serve",
-        "start": "NODE_ENV=production node server.js ",
-        "build": "vue-cli-service build",
-        "test": "vue-cli-service lint && vue-cli-service test:unit",
-        "lint": "vue-cli-service lint",
-        "heroku-postbuild": "npm run build"
-    },
-    "dependencies": {
-        "compression": "^1.7.4",
-        "core-js": "^3.4.4",
-        "express": "^4.17.1",
-        "vue": "^2.6.10",
-        "vue-router": "^3.1.3"
-    },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "^4.1.0",
-        "@vue/cli-plugin-eslint": "^4.1.0",
-        "@vue/cli-plugin-router": "^4.1.0",
-        "@vue/cli-plugin-unit-jest": "^4.1.0",
-        "@vue/cli-service": "^4.1.0",
-        "@vue/eslint-config-prettier": "^5.0.0",
-        "@vue/test-utils": "1.0.0-beta.29",
-        "babel-eslint": "^10.0.3",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.10.0",
-        "eslint-plugin-prettier": "^3.1.2",
-        "eslint-plugin-vue": "^5.0.0",
-        "prettier": "^1.19.1",
-        "vue-template-compiler": "^2.6.10"
-    }
+  "name": "poker",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve",
+    "heroku-postbuild": "npm run build",
+    "start": "NODE_ENV=production node server.js ",
+    "test": "vue-cli-service lint && vue-cli-service test:unit"
+  },
+  "dependencies": {
+    "compression": "^1.7.4",
+    "core-js": "^3.4.4",
+    "express": "^4.17.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.1.0"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-router": "^4.1.0",
+    "@vue/cli-plugin-unit-jest": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "@vue/eslint-config-prettier": "^5.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^5.0.0",
+    "prettier": "^1.19.1",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.4",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
+  }
 }
