--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.4",
     "core-js": "^3.4.4",
     "express": "^4.17.1",
+    "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0"
