--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.4.4",
     "express": "^4.17.1",
     "material-design-icons-iconfont": "^5.0.1",
+    "socket.io": "^2.3.0",
     "universal-cookie": "^4.0.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
