--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "style-resources-loader": "^1.3.2",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-cli-plugin-vuetify": "^2.0.4",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
